# CppCraftClient

./: .gitignore  CMakeLists.txt  README.md  loginpage.cpp  loginpage.h  loginpage.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  task.h
include/: loginpage.h  mainwindow.h  networkmanager.h  task.h  taskpage.h
src/: loginpage.cpp  mainwindow.cpp  networkmanager.cpp  taskpage.cpp
ui/: loginpage.ui  mainwindow.ui  taskpage.ui
